--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,7 +36,7 @@
     font-family: 'Lato', sans-serif;
     text-align: center;
     padding-bottom: 0.5em;
-    color:#a1a1a1;
+    color: black;
     margin-left:9.7em;
     text-transform: uppercase;
     letter-spacing: 0.09em;
